--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -114,8 +114,8 @@
     right: 0;
     bottom: 0;
     left: 0;
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 @media (min-width: 640px) {
