--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -116,6 +116,8 @@
     left: 0;
     width: 100%;
     height: 100%;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
 
 @media (min-width: 640px) {
